# presentations

./: README.md  annotated.html  classes.html  classf__str-members.html  classf__str.html  classmy__opt-members.html  classmy__opt.html  conceptbig__math__capable.html  concepts.html  cpp_file_for_gh.cpp  dir_3393e4b7e55c14c644bddc16171b8c4a.html  dir_3393e4b7e55c14c644bddc16171b8c4a_dep.map  dir_3393e4b7e55c14c644bddc16171b8c4a_dep.md5  dir_9bedadff22c5d66a507c1f6fc2e91a0b.html  dir_9bedadff22c5d66a507c1f6fc2e91a0b_dep.map  dir_9bedadff22c5d66a507c1f6fc2e91a0b_dep.md5  dir_a5a152414311ba2d298b07c61e6ed2fd.html  dir_a5a152414311ba2d298b07c61e6ed2fd_dep.map  dir_a5a152414311ba2d298b07c61e6ed2fd_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  doxygen_crawl.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  (+29 more)
.github/workflows/: build_run_unit_test_cmake.yml  build_test_cmake.yml  gen_docs.yml
docs/: Doxyfile  README.md
examples/: CMakeLists.txt  README.md
examples/intro_generic_programming/: CMakeLists.txt  intro_generic_programming_test.cpp
examples/std_span/: CMakeLists.txt  std_span_test.cpp
examples/unit_test_with_catch2/: CMakeLists.txt  unit_test_with_catch2_test.cpp
html/: dir_d28a4824dc47e487b107a5db32ef43c4.html  graph_legend.html  index.html  pages.html
html/search/: all_2.js  all_3.js  searchdata.js
latex/: md__2github_2workspace_2examples_2README.tex  refman.tex
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  concepts_0.js  files_0.js  files_1.js  files_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
